logs/dag_id=ETL/run_id=scheduled__2023-05-25T00:00:00+00:00/task_id=add_data/attempt=31.log
[2023-05-26T15:56:14.322+0000] {taskinstance.py:1078} INFO - Dependencies not met for <TaskInstance: ETL.add_data scheduled__2023-05-25T00:00:00+00:00 [up_for_retry]>, dependency 'Not In Retry Period' FAILED: Task is not ready for retry yet but will be retried automatically. Current date is 2023-05-26T15:56:14.322409+00:00 and task will be retried at 2023-05-26T15:58:12.203249+00:00.
[2023-05-26T15:56:14.327+0000] {local_task_job.py:151} INFO - Task is not able to be run
[2023-05-26T15:58:14.038+0000] {taskinstance.py:1084} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: ETL.add_data scheduled__2023-05-25T00:00:00+00:00 [queued]>
[2023-05-26T15:58:14.056+0000] {taskinstance.py:1084} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: ETL.add_data scheduled__2023-05-25T00:00:00+00:00 [queued]>
[2023-05-26T15:58:14.056+0000] {taskinstance.py:1282} INFO - 
--------------------------------------------------------------------------------
[2023-05-26T15:58:14.057+0000] {taskinstance.py:1283} INFO - Starting attempt 31 of 35
[2023-05-26T15:58:14.057+0000] {taskinstance.py:1284} INFO - 
--------------------------------------------------------------------------------
[2023-05-26T15:58:14.080+0000] {taskinstance.py:1303} INFO - Executing <Task(PostgresOperator): add_data> on 2023-05-25 00:00:00+00:00
[2023-05-26T15:58:14.091+0000] {standard_task_runner.py:55} INFO - Started process 1412 to run task
[2023-05-26T15:58:14.099+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'ETL', 'add_data', 'scheduled__2023-05-25T00:00:00+00:00', '--job-id', '299', '--raw', '--subdir', 'DAGS_FOLDER/refresh_token_DAG.py', '--cfg-path', '/tmp/tmppo8q46wi']
[2023-05-26T15:58:14.101+0000] {standard_task_runner.py:83} INFO - Job 299: Subtask add_data
[2023-05-26T15:58:14.183+0000] {task_command.py:388} INFO - Running <TaskInstance: ETL.add_data scheduled__2023-05-25T00:00:00+00:00 [running]> on host 05172cfd5782
[2023-05-26T15:58:14.398+0000] {taskinstance.py:1511} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=fox
AIRFLOW_CTX_DAG_ID=ETL
AIRFLOW_CTX_TASK_ID=add_data
AIRFLOW_CTX_EXECUTION_DATE=2023-05-25T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=31
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2023-05-25T00:00:00+00:00
[2023-05-26T15:58:14.400+0000] {sql.py:254} INFO - Executing: 
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            [('2023-05-25T09:21:02.777Z',
            'Kataklysm',
            'Guillotine',
            '2023-05-25'
            ), 
            ('2023-05-25T09:18:01.673Z',
            'YAKTAK',
            'Чекає вдома (feat. DOVI)',
            '2023-05-25'
            )]
            
        
[2023-05-26T15:58:14.414+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-05-26T15:58:14.812+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-05-26T15:58:14.816+0000] {sql.py:375} INFO - Running statement: 
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            [('2023-05-25T09:21:02.777Z',
            'Kataklysm',
            'Guillotine',
            '2023-05-25'
            ), 
            ('2023-05-25T09:18:01.673Z',
            'YAKTAK',
            'Чекає вдома (feat. DOVI)',
            '2023-05-25'
            )]
            
        , parameters: None
[2023-05-26T15:58:14.817+0000] {taskinstance.py:1775} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "["
LINE 3:             [('2023-05-25T09:21:02.777Z',
                    ^

[2023-05-26T15:58:14.828+0000] {taskinstance.py:1326} INFO - Marking task as UP_FOR_RETRY. dag_id=ETL, task_id=add_data, execution_date=20230525T000000, start_date=20230526T155814, end_date=20230526T155814
[2023-05-26T15:58:14.849+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 299 for task add_data (syntax error at or near "["
LINE 3:             [('2023-05-25T09:21:02.777Z',
                    ^
; 1412)
[2023-05-26T15:58:14.869+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-05-26T15:58:14.895+0000] {taskinstance.py:2585} INFO - 0 downstream tasks scheduled from follow-on schedule check
